--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <h1>{{title}}</h1>
 
-
-<app-connexion></app-connexion>
-
-<app-list></app-list>
+<div *ng-if="connected"> 
+    <app-connexion></app-connexion>
+</div>
+<div *ng-if="!connected">
+    <app-list></app-list>
+</div>
 
 <router-outlet></router-outlet>
