plus que le post a gérer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
 <h1>{{title}}</h1>
 
-<div *ng-if="connected"> 
-    <app-connexion></app-connexion>
-</div>
-<div *ng-if="!connected">
-    <app-list></app-list>
-</div>
+<app-connexion></app-connexion>
+<app-list *ngIf="connected"></app-list>
 
 <router-outlet></router-outlet>
