--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<h1>{{title}}</h1>
-
-<app-connexion></app-connexion>
-<app-list *ngIf="connected"></app-list>
-
-<router-outlet></router-outlet>
+<div class="container">
+    <h1>{{title}}</h1>
+    <router-outlet></router-outlet>
+</div>
